# TCproj

./: README  dune-project  locate_error.py  ormain.txt  record.md  test_compiler.sh
_build/: .db  .digest-db  log
_build/default/: toycproj.dune-package  toycproj.install  toycproj.opam
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: codegen.ml  lexer.ml  lexer.mll  parser.ml  parser.mli  parser.mly  parser.output  semantic.ml  toyc.cma  toyc.cmxa  toyc.cmxs  toyc.ml-gen
_build/default/lib/.merlin-conf/: lib-toyc
_build/default/lib/.toyc.objs/: toyc__Codegen.impl.all-deps  toyc__Codegen.impl.d  toyc__Lexer.impl.all-deps  toyc__Semantic.impl.d
_build/default/lib/.toyc.objs/byte/: toyc.cmi  toyc.cmo  toyc.cmt  toyc__Ast.cmi  toyc__Ast.cmo  toyc__Ast.cmt  toyc__Codegen.cmi  toyc__Codegen.cmo  toyc__Codegen.cmt  toyc__Lexer.cmi  toyc__Lexer.cmo  (+11 more)
_build/default/test/.merlin-conf/: exe-test_toycproj
lib/: ast.ml  codegen.ml  dune  lexer.mll  parser.mly  semantic.ml  token.ml
test/: 01_minimal  01_minimal.s  02_assignment  02_assignment.s  03_if_else.s  04_while_break.s  05_function_call.s  06_continue.s  07_scope_shadow.s  08_short_circuit.s  09_recursion.s  1.const.c  10_advanced_matrix.c  10_void_fn.s  11_precedence.s  12_division_check.s  13_scope_block.s  14_nested_if_while  14_nested_if_while.s  15_multiple_return_paths.s  16.tc  17  17.s  17.tc  19  19.s  19.tc  2.dead_code.c  20  20.s  3.copy.c  4.common_subexpr.c  5.algebra.c  6_tail_recursion.c  7_loop.c  8_basic_combined.c  9_advanced_graph.c  check  check.s  check.tc  (+4 more)
(+13 files in other folders)
